--- a/frontends/open-discussions/scss/podcasts.scss
+++ b/frontends/open-discussions/scss/podcasts.scss
@@ -240,7 +240,8 @@
         border-radius: 5px;
         max-width: 125px;
         min-width: 125px;
-        max-height: 79px;
+        height: 77px;
+        object-fit: cover;
         overflow: hidden;
       }
     }
@@ -267,7 +268,8 @@
     .cover-img {
       img {
         width: 100%;
-        min-height: 170px;
+        height: 170px;
+        object-fit: cover;
         border-radius: 5px 5px 0 0;
       }
     }
